Config updater
* when new config option are added, they are now automatically added to
existing config.yml files
* fixed an issue with lore wrapping for items
* added a timer for errors